DAS-125 #comment default property and asterix

--- a/app/modules/form-fields/single-select-field/single-select.component.html
+++ b/app/modules/form-fields/single-select-field/single-select.component.html
@@ -5,6 +5,10 @@
             [formControl]="field"
             data-style="select-with-transition"
             data-size="7">
-            <option *ngFor="let item of dataList" [ngValue]="item">{{item.Name}}</option>
+            <option *ngFor="let item of dataList; let i = index; let l = last"
+                    [ngValue]="item"
+                    [attr.selected]="index === last">
+                {{item.Name}}
+            </option>
     </select>
 </div>
