--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -87,7 +87,7 @@
                                     <div class="col-xs-12">
                                         <singleselect-field-cmp
                                                 [dataList]="calendarEntryTypes"
-                                                [options]="{title: 'Type', default: 'Other'}"
+                                                [options]="{title: 'Type*', default: 'Other'}"
                                                 [disabled]="role"
                                                 [errorForm]="errorForm"
                                                 [field]="availabilityForm.controls.EntryType"></singleselect-field-cmp>
