DAS-112 #comment rename button

--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -138,7 +138,7 @@
                         </button>
                     </div>
                     <div class="col-xs-8">
-                        <button id="wizard-form" *ngIf="!permission" class="btn btn-success pull-right m-r-20 p-l-r-20 font-16" type="button" [disabled]="propertyForm.invalid" (click)="onSubmit(true)">Save & Cancel</button>
+                        <button id="wizard-form" *ngIf="!permission" class="btn btn-success pull-right m-r-20 p-l-r-20 font-16" type="button" [disabled]="propertyForm.invalid" (click)="onSubmit(true)">Save & Close</button>
                         <button *ngIf="!permission" class="btn btn-success pull-right m-r-20 p-l-r-20 font-16" type="button" [disabled]="propertyForm.invalid"  (click)="onSubmit()">Save & Continue</button>
                         <div class="togglebutton pull-right">
                             <label>
