--- a/app/pages/properties/setrates/setrates.component.css
+++ b/app/pages/properties/setrates/setrates.component.css
@@ -29,6 +29,7 @@
 	font-size: 16px;
 	text-align: left;
 	color: #0b5a7c;
+	width: 100%;
 }
 .table-rates tbody td .text-value {
 	line-height: 36px;
