--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -39,6 +39,7 @@
                                     <tr *ngFor="let rate of propertyService.rates; let i = index">
                                         <td width="25%">
                                             <div class="form-group date-group" *ngIf="isEdit[i]">
+                                                <span class="danger" *ngIf="rateForm.controls.StartDate.invalid">{{rateForm.controls.StartDate.errors.serverError}}</span>
                                                 <i class="material-icons">insert_invitation</i>
                                                 <input type="text"
                                                        class="form-control datepicker"
@@ -60,6 +61,7 @@
                                         </td>
                                         <td width="25%">
                                             <div class="form-group date-group" *ngIf="isEdit[i]">
+                                                <span class="danger" *ngIf="rateForm.controls.EndDate.invalid">{{rateForm.controls.EndDate.errors.serverError}}</span>
                                                 <i class="material-icons">insert_invitation</i>
                                                 <input type="text"
                                                        class="form-control datepicker"
@@ -81,6 +83,7 @@
                                         </td>
                                         <td width="9%">
                                             <div class="form-group" *ngIf="isEdit[i]">
+                                                <span class="danger" *ngIf="rateForm.controls.Value.invalid">{{rateForm.controls.Value.errors.serverError}}</span>
                                                 <input type="text"
                                                        class="form-control"
                                                        [formControl]="rateForm.controls.Value" />
@@ -91,6 +94,7 @@
                                         </td>
                                         <td width="12%">
                                             <div class="form-group" *ngIf="isEdit[i]">
+                                                <span class="danger" *ngIf="rateForm.controls.CommissionPercentage.invalid">{{rateForm.controls.CommissionPercentage.errors.serverError}}</span>
                                                 <input type="text"
                                                        class="form-control"
                                                        [formControl]="rateForm.controls.CommissionPercentage" />
@@ -101,6 +105,7 @@
                                         </td>
                                         <td width="9%">
                                             <div class="form-group" *ngIf="isEdit[i]">
+                                                <span class="danger" *ngIf="rateForm.controls.Fees.invalid">{{rateForm.controls.Fees.errors.serverError}}</span>
                                                 <input type="text"
                                                        class="form-control"
                                                        [formControl]="rateForm.controls.Fees" />
